fix file search icon on safari

--- a/mnote-styles/modules/filesearch.scss
+++ b/mnote-styles/modules/filesearch.scss
@@ -25,8 +25,7 @@
     }
 
     .filesearch-button {
-      width: fit-content;
-      min-width: fit-content;
+      width: 24px;
       flex-shrink: 0;
       height: 100%;
       padding: 4px;
